[project]
name = "nonapx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "itk>=5.4.6",
    "pydicom>=3.0.2",
    "streamlit>=1.59.0",
    "tomlkit>=0.15.0",
    "totalsegmentator>=2.15.0",
    "tqdm>=4.68.3",
]

[tool.ruff]
line-length = 150
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "single"
